# agent-tui

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  build_notes.txt  bunfig.toml  install.ps1  install.sh  package.json  pyproject.toml  skills-lock.json  tsconfig.json
.agents/skills/opentui/: config.ts
.agents/skills/reference-repos/: SKILL.md
.agents/skills/update-dependencies/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: agent-stop.ts
.github/hooks/: agent-stop.ts  hooks.json
.github/workflows/: release.yml
docs/: keybinds.md
scripts/: build.ts
scripts/tests/: e2e-uninstall.ts  e2e-update.ts
src/: app.rs  app.tsx  cli.ts  event.rs  index.tsx  main.rs  main.tsx  tui.rs  ui.rs  update.rs
src/agent_tui/: app.py
src/agent_tui/tui/: formatters.py  status_line.py  tool_approval_screen.py
src/components/: TextInput.tsx  index.ts
src/components/ActivityLog/: AssistantActivity.tsx  ReasoningActivity.tsx  UserActivity.tsx  index.tsx  samples.ts
src/components/TextInput/: index.tsx
src/components/activity-log/: activity-log.tsx  assistant-activity.tsx  error-activity.tsx  index.ts  reasoning-activity.tsx  scroll-helpers.ts  task-activity.tsx  tool-activity.tsx  use-agent-scroll-position.ts  user-activity.tsx
src/components/common/: approval-button.tsx  index.ts
src/components/control-tower/: control-panel.tsx  control-tower.tsx  index.ts  menu-item.tsx  settings-panel.tsx  tower-tabs.tsx
src/components/status-line/: help-hint.tsx  index.ts  status-back-button.tsx  status-line.tsx  use-dot-bounce.ts
src/components/text-input/: index.ts  text-input.tsx  use-paste-shortening.ts
src/hooks/: index.ts  use-agent-navigation.ts  use-agent-statuses.ts  use-ctrl-c-exit.ts  use-session-config.ts  use-tower-keybinds.ts
src/lib/: branded-types.ts  clipboard.ts  constants.ts  syntax-style.ts  versions.ts  vscode-shift-enter.ts
src/lib/activity-store/: activity-index.ts  factories.ts  index.ts  reducer.ts  store.ts
src/lib/mock-stream/: scripted-reply.ts
src/lib/server/: agent-ws-client.ts  chat-file.ts  index.ts  log-file.ts  rest-endpoints.ts  resume.ts  spawn.ts  start-server.ts  (+3 more)
src/schemas/: activities.ts  branded-types.ts  rest-endpoints.ts
(+98 files in other folders)
