[project]
name = "agent-tui"
version = "0.1.0"
description = "Terminal user interface for AI agents built on agent-core."
readme = "README.md"
authors = [
    { name = "David Koleczek", email = "45405824+DavidKoleczek@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "agent-core-toolkit==0.1.0",
    "interop-router==0.1.0",
    "textual-dev>=1.8,<2.0",
    "textual[syntax]>=6.11,<7.0",
]

[project.scripts]
agent-tui = "agent_tui.app:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.14",
    "ty>=0.0.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PT",   # flake-pytest-style
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",   # line-too-long (formatter makes best-effort attempt)
    # The following rules conflict with the formatter, see: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC002", # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
asyncio_mode = "auto"
